--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <ul class="gallery"></ul>
 
-    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
-    <script type="module" src="js/gallery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js" async></script>
+    <script src="js/gallery.js" type="module" defer></script>
   </body>
 </html>
